# scylla2

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
scylla2/: Cargo.toml
scylla2-cql/: Cargo.toml
scylla2-cql/src/: cql.rs  cql_type.rs  error.rs  event.rs  extensions.rs  frame.rs  lib.rs  options.rs  prelude.rs  protocol.rs  request.rs  response.rs  utils.rs  value.rs
scylla2-cql/src/frame/: compression.rs  envelope.rs
scylla2-cql/src/protocol/: auth.rs  read.rs  write.rs
scylla2-cql/src/request/: auth.rs  batch.rs  execute.rs  options.rs  prepare.rs  query.rs  register.rs  startup.rs  statement.rs
scylla2-cql/src/request/query/: parameters.rs  values.rs
scylla2-cql/src/request/statement/: batch.rs  execute.rs  query.rs  query_values.rs
scylla2-cql/src/response/: auth.rs  error.rs  result.rs  supported.rs
scylla2-cql/src/response/result/: column_spec.rs  cql_value.rs  lwt.rs  prepared.rs  rows.rs  set_keyspace.rs
scylla2-cql/src/value/: convert.rs  cql_value.rs  iterator.rs
scylla2/src/: auth.rs  connection.rs  debug.rs  error.rs  event.rs  execution.rs  lib.rs  prelude.rs  session.rs  statement.rs  topology.rs  utils.rs
scylla2/src/connection/: config.rs  stream.rs  tcp.rs  write.rs
scylla2/src/execution/: load_balancing.rs  profile.rs  result.rs  retry.rs  speculative.rs  utils.rs
scylla2/src/session/: config.rs  control.rs  event.rs  worker.rs
scylla2/src/statement/: batch.rs  config.rs  options.rs  prepared.rs  query.rs  values.rs
scylla2/src/topology/: node.rs  partitioner.rs  peer.rs  ring.rs  sharding.rs
scylla2/src/topology/node/: worker.rs
scylla2/tests/: batch.rs  paged_stream.rs  prepared_statement.rs  reprepare.rs  serde.rs  utils.rs
scylla2/tests/utils/: mod.rs
