[package]
name = "scylla2-cql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bigdecimal = ["dep:bigdecimal", "num-bigint"]
cql-value = ["bigdecimal"]
lz4 = ["dep:lz4_flex"]
snappy = ["dep:snap"]
protocol = ["dep:async-trait", "dep:tokio"]
write-all-vectored = []

[dependencies]
async-trait = { version = "0.1", optional = true }
bigdecimal = { version = "0.3", optional = true }
bytes = "1"
chrono = { version = "0.4.23", optional = true }
crc32fast = { version = "1.3.2" }
enumflags2 = { version = "0.7.5", features = ["std"] }
lz4_flex = { version = "0.9", optional = true }
num-bigint = { version = "0.4", optional = true }
uuid = { version = "1" }
snap = { version = "1", optional = true }
string = { version = "0.3", optional = true }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "time"], optional = true }
thiserror = "1"
