[package]
name = "scylla2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bigdecimal = ["scylla2-cql/bigdecimal", "num-bigint"]
chrono = ["scylla2-cql/chrono"]
cql-value = ["scylla2-cql/cql-value", "bigdecimal"]
num-bigint = ["scylla2-cql/num-bigint"]
lz4 = ["scylla2-cql/lz4"]
snappy = ["scylla2-cql/snappy"]
ssl = ["dep:tokio-openssl", "dep:openssl"]
string = ["scylla2-cql/string"]
write-all-vectored = ["scylla2-cql/write-all-vectored"]

[dependencies]
arc-swap = "1"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
once_cell = "1"
openssl = { version = "0.10", optional = true }
rand = "0.8"
scylla2-cql = { path = "../scylla2-cql",  default-features = false, features = ["protocol"] }
socket2 = "0.5"
sharded-slab = "0.1.4"
strum = "0.24"
swap-buffer-queue = { git = "https://github.com/wyfo/swap-buffer-queue", features = ["async", "write", "write-vectored"] }
thiserror = "1"
tokio = { version = "1", features = ["io-util", "net", "rt", "sync", "time", "macros"] }
tokio-openssl = { version = "0.6", optional = true }
tracing = { version = "0.1", optional = true }
uuid = "1"

[dev-dependencies]
anyhow = "1"
stdext = "0.3"
